src/test/ui/const-generics/issues/issue-64494.full.stderr
error[E0119]: conflicting implementations of trait `MyTrait`:
  --> $DIR/issue-64494.rs:18:1
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   | ------------------------------------ first implementation here
LL |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
